@startuml name "finta"

class Fact {
  - time: string

  + Fact(player: Player, time: string)

  + getPlayer(): Player
  + getMinute(): string

  + setMinute(minute: string): void
  + setPlayer(player: Player): void
}

class Goal {
  - isOwnGoal: bool
  + Goal(player: Player, time: string, isOwnGoal: bool)
}

class YellowCard {
  + YellowCard(player: Player, time: string)
}

class RedCard {
  + RedCard(player: Player, time: string)
}

class Match {
  - id: unsigned long int
  - {static} nextId: unsigned long int
  - matchDay: unsigned short

  + Match()
  + getId(): unsigned long int
  + getMatchDay(): unsigned short
  + setMatchDay(matchDay: unsigned short): void
  + getMatchInfo(): MatchInfo
  + setMatchInfo(matchInfo: MatchInfo): void
  + getMatchResult(): MatchResult
  + setMatchResult(matchResult: MatchResult): void
}

class MatchResult {
  - homeTeamScore: unsigned short
  - awayTeamScore: unsigned short

  + MatchResult(homeTeam: Team, awayTeam: Team, \n homeTeamScore: unsigned short, awayTeamScore: unsigned short)
  + getMatchResult(): string
  + setMatchResult(homeTeam: Team, awayTeam: Team, \n homeTeamScore: unsigned short, awayTeamScore: unsigned short): void
  + getHomeTeam(): Team
  + getAwayTeam(): Team
  + getAwayTeamScore(): unsigned short
  + getHomeTeamScore(): unsigned short
}

Class MatchInfo {
  - matchDate: string
  - matchTime: string
  - matchPlace: string

  + MatchInfo(matchDate: string, matchTime: string, matchPlace: string)
  + getMatchDate(): string
  + setMatchDate(matchDate: Date): void
  + getMatchHour(): string
  + setMatchTime(matchTime: Time): void
  + getMatchPlace(): string
  + setMatchPlace(matchPlace: string): void
  + getGoals(): Goal[]
  + addGoal(goal: Goal): void
  + getYellowCards(): Fact[]
  + addYellowCard(yellowCard: Fact): void
  + getRedCards(): Fact[]
  + addRedCard(redCard: Fact): void
}

Class MatchStats {
  - shots: unsigned short
  - shotsOnTarget: unsigned short
  - possession: unsigned short
  - passes: unsigned short
  - passAccuracy: unsigned short
  - fouls: unsigned short
  - yellowCards: unsigned short
  - redCards: unsigned short
  - offsides: unsigned short
  - corners: unsigned short

  + MatchStats()
  + MatchStats(shots: unsigned short, shotsOnTarget: unsigned short, possession: unsigned short, \n passes: unsigned short, passAccuracy: unsigned short, fouls: unsigned short, \n yellowCards: unsigned short, redCards: unsigned short, offsides: unsigned short, corners: unsigned short)

  + getShots(): unsigned short
  + setShots(shots: unsigned short): void
  + getShotsOnTarget(): unsigned short
  + setShotsOnTarget(shotsOnTarget: unsigned short): void
  + getPossession(): unsigned short
  + setPossession(possession: unsigned short): void
  + getPasses(): unsigned short
  + setPasses(passes: unsigned short): void
  + getPassAccuracy(): unsigned short
  + setPassAccuracy(passAccuracy: unsigned short): void
  + getFouls(): unsigned short
  + setFouls(fouls: unsigned short): void
  + getYellowCards(): unsigned short
  + setYellowCards(yellowCards: unsigned short): void
  + getRedCards(): unsigned short
  + setRedCards(redCards: unsigned short): void
  + getOffsides(): unsigned short
  + setOffsides(offsides: unsigned short): void
  + getCorners(): unsigned short
  + setCorners(corners: unsigned short): void

}

class Team {
  - name: string
  - points: unsigned short
  - goals: unsigned short
  - goalsAgainst: unsigned short
  - goalsDifference: unsigned short
  - yellowCards: unsigned short
  - redCards: unsigned short

  + Team(name: string)
  + getName(): string
  + setName(name: string): void
  + getPoints(): unsigned short
  + addPoints(points: unsigned short): void
  + getMatchResults(): MatchResult[]
  + addMatchResult(matchResult: MatchResult): void
  + getStaff(): Person[]
  + addStaff(person: Person): void
  + getPlayers(): Player[]
  + addPlayer(player: Player): void
}

class Person {
  - name: string

  + Person(name: string)
  + getName(): string
  + setName(name: string): void
}

class Player {
  - goalsScored: unsigned short
  - yellowCards: unsigned short
  - redCards: unsigned short

  + Player(name: string, number: unsigned short, position: string)
  + getGoalsScored(): unsigned short
  + addGoalsScored(goalsScored: unsigned short): void
  + getYellowCards(): unsigned short
  + addYellowCards(yellowCards: unsigned short): void
  + getRedCards(): unsigned short
  + addRedCards(redCards: unsigned short): void
}

class League {
  - name: string

  + League(name: string)
  + League(name: string, teams: Team[])
  + League(name: string, teams: Team[], matchResults: MatchResult[])
 
  + getName(): string
  + setName(name: string): void
  + getTeams(): Team[]
  + addTeam(team: Team): void
  + getMatch(): Match
  + addMatch(match: Match): void
  + addMatch(matches: Match): void
  + findOrCreateTeam(const std::string& teamName)
  + fillMatchResults(string: filePath): void
}

class Console {
  - Console()

  + {static} printMatchResults(matchResults: MatchResult[]): void
  + {static} printMatchResult(team: Team): void
  + {static} printTable(teams: Team[]): void
}

class InvalidMatchIdException {
  - matchDay: unsigned short

  + InvalidMatchIdException(matchDay: unsigned short)
  + getMatchDay(): unsigned short
}

class InvalidMatchDayException {
  - matchDay: unsigned short

  + InvalidMatchDayException(matchDay: unsigned short)
  + getMatchDay(): unsigned short
}

MatchInfo *-- "goals 0..*" Goal
MatchInfo *-- "yellowCards 0..*" Fact 
MatchInfo *-- "redCards 0..*" Fact 

MatchResult "0..*" -- "homeTeam 1" Team : has <
MatchResult "0..*" -- "1 awayTeam" Team : has <

Team *-- "staff 0..*" Person 
Team  *-- "players 0..*" Player 

League "1" --* "teams 20" Team 
League "1" --* "matches 0..380" Match 
League .. InvalidMatchIdException : <<throws>>
League .. InvalidMatchDayException : <<throws>>

Person <|-- Player

Fact <|-- Goal
Fact <|-- YellowCard
Fact <|-- RedCard

Match *-- MatchResult 
Match *-- MatchInfo 
Match *-- MatchStats 

Fact o-- Player : player


MatchResult .. Console

@enduml
